   * new multiplayer maps: The Manzivan Traps
   * revised multiplayer maps: Sablestone Delta
 * units:
   * balancing changes:
     * decreased cost of the Mudcrawler from 9 to 5
     * removed Necrophage from random_leader
   * new units
     * added the Armagedon Drake, it is not used in any mainline eras
   * unit Art
     * added a recruit animation to the skeleton
 * user interface
 	* turn bell moved to sound tab in prefereces
	* new slider - bell volume
   * disable inactive sliders instead of hiding them
   * sliders can be adjusted with keyboard left and right
   * sidebar reports related to gold, units, villages and time get greyed out
     during other team's turns
   * improve the tiny gui support (resolution of 320x240 pixels)
   * changed the hotkey for 'end turn' from 'alt+space' to 'ctrl/cmd+space'
     because it interferes with several common window managers
   * changed the hotkey for 'repeat recruit' from 'ctrl+shift+r' to
     'ctrl+alt+r' since shift toggles accelerated mode and produced an
     animation glitch with this hotkey; this needs to be considered for
     future hotkey changes/additions (see bug #6312)
 * WML engine
   * allow_new_game key (default=yes) to prevent [multiplayer] scenarios to
     show up in the multiplayer game creation interface (FR #6397)
   * new [set_specials] tag to allow custom special in effect tags
   * new remove_specials=<id_list> key to allow to remove specials in effect 
     tags
   * obsolete set_special= in [effect] tags
   * correct handling of UTF8 filenames under windows
   * fighting animations can now be filtered on swing number
   * add progressive paramteters, allow to specify a value that will move
   continuously in an animation
   * alpha blending is our first progressive parameter
   * units can now have a recruit animation that will be played on unit
   recruit.
   * units now have idle animations when they arn't used for some time