@@ -298,6 +298,9 @@ public:
 	bool turbo() const;
 	void set_turbo(bool turbo);
 
+	int turbo_speed() const;
+	void set_turbo_speed(const int speed);
+
 	//Delay routines: use these not SDL_Delay (for --nogui).
 	void non_turbo_delay() const;
 	void delay(unsigned int milliseconds) const;
@@ -462,7 +465,7 @@ private:
 
 
 
-
+	int turbo_speed_;
 	bool turbo_, grid_;
 	double sidebarScaling_;
 
